; ModuleID = '/home/carl/AnghaBench/linux/tools/perf/util/extr_intel-pt.c_intel_pt_free_queue.c'
source_filename = "/home/carl/AnghaBench/linux/tools/perf/util/extr_intel-pt.c_intel_pt_free_queue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.intel_pt_queue = type { i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @intel_pt_free_queue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @intel_pt_free_queue(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.intel_pt_queue*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.intel_pt_queue*
  store %struct.intel_pt_queue* %5, %struct.intel_pt_queue** %3, align 8
  %6 = load %struct.intel_pt_queue*, %struct.intel_pt_queue** %3, align 8
  %7 = icmp ne %struct.intel_pt_queue* %6, null
  br i1 %7, label %9, label %8

8:                                                ; preds = %1
  br label %32

9:                                                ; preds = %1
  %10 = load %struct.intel_pt_queue*, %struct.intel_pt_queue** %3, align 8
  %11 = getelementptr inbounds %struct.intel_pt_queue, %struct.intel_pt_queue* %10, i32 0, i32 5
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @thread__zput(i32 %12)
  %14 = load %struct.intel_pt_queue*, %struct.intel_pt_queue** %3, align 8
  %15 = getelementptr inbounds %struct.intel_pt_queue, %struct.intel_pt_queue* %14, i32 0, i32 4
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @intel_pt_decoder_free(i32 %16)
  %18 = load %struct.intel_pt_queue*, %struct.intel_pt_queue** %3, align 8
  %19 = getelementptr inbounds %struct.intel_pt_queue, %struct.intel_pt_queue* %18, i32 0, i32 3
  %20 = call i32 @zfree(i32* %19)
  %21 = load %struct.intel_pt_queue*, %struct.intel_pt_queue** %3, align 8
  %22 = getelementptr inbounds %struct.intel_pt_queue, %struct.intel_pt_queue* %21, i32 0, i32 2
  %23 = call i32 @zfree(i32* %22)
  %24 = load %struct.intel_pt_queue*, %struct.intel_pt_queue** %3, align 8
  %25 = getelementptr inbounds %struct.intel_pt_queue, %struct.intel_pt_queue* %24, i32 0, i32 1
  %26 = call i32 @zfree(i32* %25)
  %27 = load %struct.intel_pt_queue*, %struct.intel_pt_queue** %3, align 8
  %28 = getelementptr inbounds %struct.intel_pt_queue, %struct.intel_pt_queue* %27, i32 0, i32 0
  %29 = call i32 @zfree(i32* %28)
  %30 = load %struct.intel_pt_queue*, %struct.intel_pt_queue** %3, align 8
  %31 = call i32 @free(%struct.intel_pt_queue* %30)
  br label %32

32:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @thread__zput(i32) #1

declare dso_local i32 @intel_pt_decoder_free(i32) #1

declare dso_local i32 @zfree(i32*) #1

declare dso_local i32 @free(%struct.intel_pt_queue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
